--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bsale",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
